<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_pet_menu"
        android:textAppearance="@android:style/TextAppearance.Material.Display1" />
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_height = "wrap_content"
            android:layout_width = "0dp"
            android:layout_weight = "1"
            android:text="@string/pet_chip_id"/>

        <EditText
            android:id="@+id/pet_chip_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:layout_width = "0dp"
            android:text="@string/pet_type"/>
        <EditText
            android:id="@+id/pet_type"
            android:layout_weight="5"
            android:layout_width = "0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:layout_width = "0dp"
            android:text="@string/pet_breed"/>
        <EditText
            android:id="@+id/pet_breed"
            android:layout_weight="5"
            android:layout_width = "0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:layout_width = "0dp"
            android:text="@string/pet_name"/>
        <EditText
            android:id="@+id/pet_name"
            android:layout_weight="5"
            android:layout_width = "0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_height = "wrap_content"
            android:layout_weight = "3"
            android:layout_width = "0dp"
            android:text="@string/pet_birthday"/>

        <EditText
            android:id="@+id/pet_birthday_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="/" />

        <EditText
            android:id="@+id/pet_birthday_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="/" />

        <EditText
            android:id="@+id/pet_birthday_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="onClickSave"
            android:text="@string/save" />
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="onClickCancel"
            android:text="@string/cancel" />
    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:onClick="onClickDelete"
        android:text="@string/delete" />
</LinearLayout>