<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create an Account"
            android:textSize="36sp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_height = "wrap_content"
                android:layout_weight = "1"
                android:layout_width = "0dp"
                android:text="@string/username"/>
            <EditText
                android:id="@+id/username"
                android:layout_weight="5"
                android:layout_width = "0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_height = "wrap_content"
                android:layout_weight = "1"
                android:layout_width = "0dp"
                android:text="@string/firstname"/>
            <EditText
                android:id="@+id/firstname"
                android:layout_weight="5"
                android:layout_width = "0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_height = "wrap_content"
                android:layout_weight = "1"
                android:layout_width = "0dp"
                android:text="@string/lastname"/>
            <EditText
                android:id="@+id/lastname"
                android:layout_weight="5"
                android:layout_width = "0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_height = "wrap_content"
                android:layout_weight = "1"
                android:layout_width = "0dp"
                android:text="@string/email"/>
            <EditText
                android:id="@+id/email"
                android:layout_weight="5"
                android:layout_width = "0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_height = "wrap_content"
                android:layout_weight = "1"
                android:layout_width = "0dp"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/password"
                android:layout_weight="5"
                android:layout_width = "0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickSubmit"
                android:text="@string/submit" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickCancel"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>