<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFoodActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_height = "wrap_content"
                android:layout_weight = "1"
                android:layout_width = "0dp"
                android:text="@string/pet_food_name"/>
            <EditText
                android:id="@+id/pet_food_name"
                android:layout_weight="5"
                android:layout_width = "0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_height = "wrap_content"
                android:layout_weight = "1"
                android:layout_width = "0dp"
                android:text="@string/pet_calories_serving"/>
            <EditText
                android:id="@+id/calories_serving"
                android:layout_weight="5"
                android:layout_width = "0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_height = "wrap_content"
                android:layout_weight = "1"
                android:layout_width = "0dp"
                android:text="@string/pet_cups_serving"/>
            <EditText
                android:id="@+id/cups_serving"
                android:layout_weight="5"
                android:layout_width = "0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_height = "wrap_content"
                android:layout_weight = "1"
                android:layout_width = "0dp"
                android:text="@string/density"/>
            <EditText
                android:id="@+id/density"
                android:layout_weight="5"
                android:layout_width = "0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickAdd"
                android:text="@string/save" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickCancel"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>